<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WalkNPay</string>
    <string name="action_settings">Change store name</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="txtscan_welcome">Welcome Sam Hunter!</string>
    <string name="txtemail">Email ID</string>
    <string name="txtpassword">Password</string>
    <string name="txtlogin">Log in</string>
    <string name="txtregister">Register</string>
    <string name="txtforgetpwd">Forgot Password ?</string>
   <string name="txtwalknpay">Walk n Pay</string>
    <string name="txtpaymentpwd">Payment Password</string>
    <string name="txtreg_header">Register Yourself to Walk n Pay</string>
    <string name="txtCD"></string>
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >Cart</item>
        <item >Wallet</item>
        <item >Rewards</item>
        <item >Offers</item>
        <item >Associate Mode</item>
         <item >About</item>
          <item >Help</item>
           <item >Log Out</item>
    </string-array>
    
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/home_icon</item>
        <item>@drawable/shopping_cart</item>
        <item>@drawable/kwallet</item>
        <item>@drawable/rewards_icon</item>
          <item>@drawable/offers</item>
            <item>@drawable/associate40</item>
        <item>@drawable/about</item>
        <item>@drawable/help</item>
         <item>@drawable/logout</item>
    </array>
    
    
    
    <!-- Scan Tab -->  
    <string name="txtscan_alert">I am not Sam</string>
    <string name="txtlogout">Logout</string>
    <string name="txtsubmit">Submit</string>
    

    <!-- cart Tab -->
    <string name="noproductmessage">Scan and add an item into the cart</string>
    <string name="txtnoproducts">No Products Available</string>
    <string name="txtDesc">Description</string>
    <string name="txtQuantity">Quantity</string>
    <string name="txtPrice">Price</string>
    <string name="txtzero">$00.00</string>
    <string name="txtrewards">Rewards</string>
    <string name="txttax">Tax</string>
    <string name="txttotal">Total</string>
    <string name="txtitem">Item</string>

    <!-- Rewards tab -->

    <string name="txtsavings">Savings on this visit</string>
    <string name="txtlifetime">Lifetime Savings</string>
    <string name="txtlifetimeamt">$125.30</string>

    <!-- pay -->

    <string name="txtpay_head">Choose your Payment</string>
    <string name="txtpay_amt">Amount</string>
    <string name="citi_card">My Citi Master\n(Card ending with 890)</string>
    <string name="visa_card">Bofa Visa\n(Card ending with 347)</string>
    <string name="chasedebit_card">Chase Debit\n(Card ending with 745)</string>
    <string name="paidtext">Your payment of $22.90 is completed using \'my citi master\' card. Thank you for your purchase.</string>
    <string name="paidresult">Receipt of your transaction is placed in your wallet.</string>
    <string name="txtcancel">Cancel</string>
    <string name="txtpay">Pay</string>
    <string name="txtamt">Amount</string>

    <color name="white_transparent">#00FFFFFF</color>

    <string-array name="cardslist">
        <item>my citi master (ends with 890)</item>
        <item>bofa visa (ends with 347)</item>
        <item>chase debit (ends with 745)</item>
    </string-array>
    <string-array name="recentbills">
        <item>Today (Huggies...)</item>
        <item>Yesterday (blender...)</item>
    </string-array>

    <string name="walletmycreditcards">My Credit/Debit cards</string>
    <string name="walletmycreditcardsinfo">Card info is encrypted &amp; saved locally</string>
    <string name="walletrecentbills">My recent receipts</string>
    <string name="walletrecentbillssearch">Search with items or dates</string>
    <string name="walletrecentbillssearchedit">Enter search text</string>
    <string name="Back">Back</string>
    
     <string name="Popup_button">Popup_Menu</string>
    <string name="menu_signout">Sign Out</string>
    <string name="menu_associate">Associate mode</string>
    <string name="menu_about">About</string>
    <string name="menu_help">Help</string>
    
     
    
    <!-- Nav Drawer Menu Items -->
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    
    
   <!--  ALERT DIALOG TEXT -->
   <string name="alert_dialog_cancel">Cancel</string>
   <string name="alert_dialog_ok">Ok</string>
   <string name="loginalertmessage">Do you want to exit from the app???</string>
   <string name="unknown_product">The scanned item is not in the library!</string>
   <string name="logoutalertmessage">Confirm logout from this account???</string>

</resources>
