<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?android:attr/actionBarSize"
    android:background="@color/theme_third_color"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/user_name"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="87dp"
        android:background="@drawable/bg_grey"
        android:ems="10"
        android:hint="@string/txtemail"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="#707070"
        android:textSize="16sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/user_name"
        android:layout_below="@+id/user_name"
        android:layout_marginTop="19dp"
        android:background="@drawable/bg_grey"
        android:ems="10"
        android:hint="@string/txtpassword"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="#707070"
        android:textSize="16sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/payment_password"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/password"
        android:layout_below="@+id/password"
        android:layout_marginTop="25dp"
        android:background="@drawable/bg_grey"
        android:ems="10"
        android:hint="@string/txtpaymentpwd"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="#707070"
        android:textSize="16sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:gravity="center_horizontal"
        android:text="@string/txtreg_header"
        android:textColor="@color/text_blue"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/submit"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/payment_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:layout_weight="1"
        android:background="@color/theme_main_color"
        android:text="Submit"
        android:textColor="#ffffff"
        android:textSize="20sp" />

</RelativeLayout>