<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?android:attr/actionBarSize"
    android:background="#f4f1ec"
    android:orientation="vertical" >
    
      
    
    
     <LinearLayout
        android:id="@+id/linearLayout0"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="20dp"
        android:layout_marginTop="40dp" >

         <ImageView
             android:id="@+id/imageView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/rewards_icon" />

         <TextView
             android:id="@+id/textView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Rewards" 
             
             android:textSize="20dp"
             android:layout_marginLeft="5dp"
              android:textColor="@color/text_blue"
             android:textStyle="bold|italic"/>
         
 </LinearLayout>
    <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="120dp"
            android:background="#C5CCD4"
          android:layout_below="@+id/linearLayout0"
          android:layout_marginTop="48dp"
          android:layout_marginLeft="10dp"
          android:layout_marginRight="10dp"
          android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:id="@+id/lbltvsavings"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtsavings"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/lbltvsavingsamt"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight=".5"
            android:gravity="left"
            android:text="@string/txtzero"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:id="@+id/lbltvlifetime"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtlifetime"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/lbltvlifetimeamt"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight=".5"
            android:gravity="left"
            android:text="@string/txtlifetimeamt"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>
   </LinearLayout>

   
</RelativeLayout>